updated pages and css with code to make footer stay at the bottom. Also fixed card issue (disappearing and layering behind the footer)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,18 @@
- /* footer {
-    position: static;
+#page-container {
+    position: relative;
+    min-height: 100vh;
+  }
+  
+  #content-wrap {
+    padding-bottom: 2.5rem;    /* Footer height */
+  }
 
-    display: flex;
-    justify-content: center;
-    flex-shrink: 0;
-    margin-top: auto;
-    padding-right: 1%; 
-    margin-bottom: 0.5%;
-}  */
+#footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;            /* Footer height */
+  }
 
 .carousel-container {
     /*background-image: url("../images/background/88246.jpg");*/
@@ -95,9 +100,7 @@
         display: none;
     }
 
-    #big-screen-footer {
-        position:fixed;bottom:0;left:0;width:100%;
-    }
+   
 
 }
 
@@ -122,13 +125,12 @@
         /*display: inline-block;*/
     }
 
+   
+
     #big-screen {
         display: none;
     }
 
-    #big-screen-footer {
-        position:fixed;bottom:0;left:0;width:100%;
-    }
     
 
 }
@@ -142,10 +144,14 @@
         display: none;
     }
 
-    #big-screen-footer {
-        position:fixed;bottom:0;left:0;width:100%;
+   
+
+    #big-screen {
+        display: contents;
     }
 
+
+  
 }
 
 @media screen and (min-width: 1201px){
